# weave

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json  weave.md
apps/desktop/: AGENTS.md  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/relay/: Cargo.toml
apps/relay/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/automations/: AGENTS.md  Cargo.toml
crates/automations/src/: lib.rs
crates/drive_sync/: AGENTS.md  Cargo.toml
crates/drive_sync/src/: lib.rs
crates/feed/: Cargo.toml
crates/feed/src/: lib.rs
crates/gemini_broker/: AGENTS.md  Cargo.toml
crates/gemini_broker/src/: lib.rs
crates/gws_adapter/: AGENTS.md  Cargo.toml
crates/gws_adapter/src/: lib.rs
crates/libraries/: Cargo.toml
crates/libraries/src/: lib.rs
crates/lms/: Cargo.toml
crates/lms/src/: lib.rs
crates/pages/: Cargo.toml
crates/pages/src/: lib.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/ui_contracts/: Cargo.toml
crates/ui_contracts/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
fixtures/demo-workspace/: AGENTS.md
fixtures/demo-workspace/WEAVE/agents/archivist/: agent.json  prompt.md
fixtures/demo-workspace/WEAVE/agents/coach/: agent.json  prompt.md
fixtures/demo-workspace/WEAVE/agents/herald/: agent.json  prompt.md
fixtures/demo-workspace/WEAVE/automations/recipes/: chat-mirror.yaml  weekly-digest.yaml
fixtures/demo-workspace/WEAVE/communities/: home.json  learning.json  projects.json
fixtures/demo-workspace/WEAVE/courses/: course-launch.json  course-rituals.json
fixtures/demo-workspace/WEAVE/courses/live-sessions/: session-office-hours.json
fixtures/demo-workspace/WEAVE/directories/employees/entities/: agent-archivist.json  agent-herald.json  drew.json  marta.json
fixtures/demo-workspace/WEAVE/directories/projects/entities/: atlas.json  orbit.json
fixtures/demo-workspace/WEAVE/exports/jobs/: export-docs-home.json  export-sheets-directory.json  export-slides-learning.json
fixtures/demo-workspace/WEAVE/libraries/documents/items/: doc-benefits.json  doc-checklist.json
fixtures/demo-workspace/WEAVE/libraries/videos/items/: video-launch-week.json  video-rituals.json
fixtures/demo-workspace/WEAVE/notifications/items/: notification-chat.json  notification-digest.json
fixtures/demo-workspace/WEAVE/pages/page-home/: meta.json  published.ref
fixtures/demo-workspace/WEAVE/pages/page-home/drafts/: agent-editor.json
fixtures/demo-workspace/WEAVE/pages/page-home/revisions/: 2026-03-16T10-00-00Z_archivist.json
fixtures/demo-workspace/WEAVE/pages/page-learning/: meta.json  published.ref
fixtures/demo-workspace/WEAVE/pages/page-learning/revisions/: 2026-03-15T15-30-00Z_coach.json
fixtures/demo-workspace/WEAVE/pages/page-projects/: meta.json  published.ref
fixtures/demo-workspace/WEAVE/pages/page-projects/drafts/: drew.json
fixtures/demo-workspace/WEAVE/themes/: theme.json
fixtures/demo-workspace/WEAVE/workspace/: settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/editor/: AGENTS.md  README.md
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  format.test.ts  format.ts  types.ts
scripts/ci/: cargo-build.sh  cargo-check.sh  cargo-lint.sh  cargo-test.sh  security-audit.sh
scripts/dev/: audit-workspace.sh  doctor.sh  rebuild.sh  relay.sh
support_docs/: spec-prd.json
(+2 files in other folders)
