[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
api = { path = "../../crates/api" }
axum.workspace = true
drive_sync = { path = "../../crates/drive_sync" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
workspace = { path = "../../crates/workspace" }
